fix some layout and spacing problems by using more flexible values with calc(min)

--- a/src/styles/animation.css
+++ b/src/styles/animation.css
@@ -126,3 +126,18 @@
 		transform: skew(15deg, -15deg);
 	}
 }
+
+.fade-in-left {
+	animation: fade-in-left 0.6s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+@keyframes fade-in-left {
+	0% {
+		transform: translateX(-50px);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
+}
